// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders with an address 1`] = `
<div
  className={
    Object {
      "data-css-1szwbq4": "",
    }
  }
>
  <h3
    className="t--info"
  >
    Where is the problem happening?
  </h3>
  <hr
    className="hr hr--dash"
  />
  <div
    className="addr addr--s"
    style={
      Object {
        "whiteSpace": "pre-line",
      }
    }
  >
    City Hall Square
    Boston, MA
  </div>
  <form
    className="sf sf--sm sf--y m-v300"
    onSubmit={[Function]}
  >
    <div
      className="sf-i"
    >
      <input
        className="sf-i-f"
        onInput={[Function]}
        placeholder="Search for another address…"
        type="text"
        value=""
      />
      <button
        className="sf-i-b"
        disabled={true}
        type="submit"
      >
        Search
      </button>
    </div>
  </form>
  <div
    className="g css-1k8tu3j"
  >
    <div
      className="g--6"
    >
      <a
        href="javascript:void(0)"
        onClick={[Function]}
      >
        Continue without location
      </a>
    </div>
    <button
      className="btn g--6"
      disabled={false}
      onClick={[Function]}
    >
      Next
    </button>
  </div>
</div>
`;

exports[`rendering renders without an address 1`] = `
<div
  className={
    Object {
      "data-css-1szwbq4": "",
    }
  }
>
  <h3
    className="t--info"
  >
    Where is the problem happening?
  </h3>
  <hr
    className="hr hr--dash"
  />
  
  <form
    className="sf sf--sm sf--y m-v300"
    onSubmit={[Function]}
  >
    <div
      className="sf-i"
    >
      <input
        className="sf-i-f"
        onInput={[Function]}
        placeholder="Search for an address…"
        type="text"
        value=""
      />
      <button
        className="sf-i-b"
        disabled={true}
        type="submit"
      >
        Search
      </button>
    </div>
  </form>
  <div
    className="g css-1k8tu3j"
  >
    <div
      className="g--6"
    >
      <a
        href="javascript:void(0)"
        onClick={[Function]}
      >
        Continue without location
      </a>
    </div>
    <button
      className="btn g--6"
      disabled={true}
      onClick={[Function]}
    >
      Next
    </button>
  </div>
</div>
`;
